# DjangoProject02

./: .env.example  .flake8  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  nginx.conf  pyproject.toml
.github/workflow/: deploy.yml
.github/workflows/: ci-cd.yml  deploy.yml
config/: settings.py  urls.py
materials/: models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_course_last_update_sent.py
nginx/conf.d/: default.conf
users/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: create_groups.py  fill_payments.py
users/migrations/: 0001_initial.py  0002_payment.py
