[project]
name = "djangoproject02"
version = "0.1.0"
description = ""
authors = [
    {name = "AleksChek26",email = "check1984@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (==5.1)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "django-filter (==24.3)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "coverage (>=7.13.4,<8.0.0)",
    "drf-yasg (>=1.21.14,<2.0.0)",
    "stripe (>=14.3.0,<15.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.1.1,<8.0.0)",
    "eventlet (>=0.40.4,<0.41.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.19.1"
black = "^26.1.0"
isort = "^7.0.0"

